# psxrecomp

./: .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  HANDOFF.md  HANDOFF_PHASE2_2026-04-11.md  ISSUES.md  MMIO_TRACING.md  OVERNIGHT_PROGRESS_20260427.md  PLAN.md  README.md  card2.mcd  dummy.1.mcr
annotations/: SCUS_942.36_annotations.csv
docs/: CYCLE_TIMING_ARCH.md
recompiler/: CMakeLists.txt
recompiler/include/: basic_block.h  control_flow.h  function_analysis.h  gte.h  mips_decoder.h  ps1_exe_parser.h
recompiler/seeds/: dispatch_miss_seeds.json  phase2_ghidra_seeds.json
recompiler/src/: annotations.cpp  annotations.hpp  basic_block.cpp  code_generator.cpp  control_flow.cpp  full_function_emitter.cpp  function_analysis.cpp  function_discovery.cpp  main_psx.cpp  mips_decoder.cpp  strict_translator.cpp
runner/: CMakeLists.txt  runner.cmake
runner/assets/: keyconfig.ini
runner/assets/scripts/: new_game.txt  press_start.txt
runner/include/: automation.h  cdrom_controller.h  cdrom_stub.h  debug_server.h  func_logger.h  game_extras.h  gpu_interpreter.h  gpu_renderer.h  gpu_state.h  gte.h  iso_reader.h  opengl_renderer.h  overlay_detector.h  overlay_manager.h  psx_runtime.h  savestate.h  xa_audio.h
runner/lib/glad/include/glad/: glad.h
runner/lib/glad/src/: glad.c
runner/src/: cdrom_stub.cpp  debug_server.c  diag_log.h  fmv_player.cpp  fmv_player.h  func_logger.c  gpu_interpreter.cpp  gpu_state.cpp  gte.cpp  input_script.cpp  interp_stub.c  iso_reader.cpp  launcher.c  main_runner.cpp  opengl_renderer.cpp  overlay_detector.cpp  overlay_manager.cpp  ps1_exe_parser.cpp  runtime.c  savestate.cpp  spu.cpp  spu.h  xa_audio.cpp
runtime/: CMakeLists.txt  runtime.cmake
runtime/include/: beetle_history.h  cdrom.h  cpu_state.h  crash_trace.h  crc32.h  debug_server.h  dirty_ram_interp.h  dma.h  freeze_heartbeat.h  gpu.h  gpu_sw_renderer.h  interrupts.h  iso_reader.h  mdec.h  memcard.h  psx_cycles.h  psx_oracle_backend.h  psx_runtime.h  sio.h  spu.h  timers.h
runtime/src/: beetle_debug_server.c  beetle_libretro.cpp  beetle_main.cpp  beetle_psx_bridge.cpp  cdrom.c  crash_trace.c  crc32.c  debug_server.c  dirty_ram_interp.c  dma.c  freeze_heartbeat.c  gpu.c  gpu_sw_renderer.c  gte.cpp  interrupts.c  iso_reader.cpp  iso_reader_c.cpp  main.cpp  mdec.c  memcard.c  memory.c  psx_cycles.c  psx_interpreter.c  psx_oracle_cmds.c  psx_oracle_stub.c  sio.c  spu.c  timers.c  traps.c
scripts/: compute_ghidra_sizes.py  find_missing_fallthrough.py  find_missing_fallthrough_v2.py  find_missing_fallthrough_v3.py  find_missing_fallthrough_v4.py  gameplay_bugs_1.txt  generate_function_list.py  ghidra_function_sizes.tsv  ghidra_functions_raw.txt  log_spam.txt  mace_diag.txt  new_game.txt  new_game_intro.txt  options_screen.txt  save_game.txt  test_equipment_menu.txt  test_main_menu.txt  test_movement.txt  test_new_game.txt  tomba_weapon_bug.txt  tomba_weapon_bug_observe.txt
tools/: _parse_crash.py  _probe_one.py  _rss_poll.sh  _spu_capture.py  _spu_probe.py  _spu_ring_diff.py  _tomba_probe.py  analyze_sio_trace.py  build_oracle.sh  check_ds_patch.py  dbg.py  debug_client.py  decode_insn.py  decode_jt.py  gen_phase2_seeds.py  mmio_tally.py  oracle_diff.py  raw_dispatch.py
tools/_options_session/: _arm_init_watch.py  _check_caller.py  _check_e6.py  _check_init_fields.py  _check_init_path.py  _check_liveness.py  _check_more_callers.py  _compare_gpu_activity.py  _ctx_ring_analyze.py  _diff_at_options.py  _dual_wtrace_slot.py  _duck_catch_init.py  _duck_inspect.py  _duck_membreak.py  _duck_ping.py  _duck_poll_writes.py  _duck_sample.py  _duck_scratch.py  _duck_slot_writes.py  _duck_snapshot.py  _duck_state_byte.py  _duck_vram_cmds.py  _find_real_changeth_site.py  _gate_byte.py  _gp0_ring_inspect.py  _gp0_when_drawing_stopped.py  _gpu_compare_clean.py  _probe_runtime_cmds.py  _runtime_screenshot.py  _runtime_slot_writes.py  _struct_diff.py  _track_display_origin.py  _verify_state0_lock.py  _vram_peek_both.py  _walk_up_chain.py
tools/duckstation/: README.md
tools/pcsx_redux_mcp/: README.md  navigate_to_gameplay.lua  requirements.txt  server.py  startup.lua
